--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    
+        <h1>HIT ME HARD AND SOFT</h1>
         <p>new billie eilish album coming´s may 17th</p>
     </header>
     <nav>
@@ -25,7 +25,7 @@
                 <source media="(min-width: 768x)" srcset="imgs/red-hair.jpg">
                 <source media="(max-width: 767px)" srcset="imgs/red-hair2.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt="qqqqqs" class="pequea"></picture>
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
-              <i class="video" width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=DVF0DcIzghkkvl4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=DVF0DcIzghkkvl4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
               <p>05/17/2024, wait for this date, the real billie eilish comeback, soon.</p>
         </article>
     </main>
