--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <article>
            
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
-              
+              <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=DVF0DcIzghkkvl4I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              <p>05/17/2024, wait for this date, the real billie eilish comeback, soon.</p>
         </article>
     </main>
     <footer>
