--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <main>
         <article>
-            <img src="imgs/blosh.pg" alt="" class="blosh">
+            <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
             <h1>ABOUT ALBUM</h1>
             <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back witch hthas</p>
            
