--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
     <main>
         <article>
             <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
-            <h1>ABOUT ALBUM (att 3.3)</h1>
+            <h1>ABOUT ALBUM (att 3.4)</h1>
             <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back witch hthas</p>
+            <picture>
+               <source media="(max-width: 800px)" srcset="imgs/red-hair2.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
            
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
               
