--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <main>
         <article>
             <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
-            <h1>ABOUT ALBUM (att 3.7)</h1>
-            <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back witch hmhas</p>
+            <h1>ABOUT ALBUM (att 3.8)</h1>
+            <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back with hmhas</p>
             <picture>
                <source media="(max-width: 800px)" srcset="imgs/hmhas-iphone3.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
            
