--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <main>
         <article>
             <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
-            <h1>ABOUT ALBUM (att 3.8)</h1>
+            <h1>ABOUT ALBUM (att 3.9)</h1>
             <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back with hmhas</p>
             <picture>
                <source media="(max-width: 800px)" srcset="imgs/hmhas-iphone3.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
            
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=wrZkP29vr9CthSvD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="video" > </iframe>
+              <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=wrZkP29vr9CthSvD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
               
               <p>05/17/2024, wait for this date, the real billie eilish comeback, soon.</p>
         </article>
