--- a/index.html
+++ b/index.html
@@ -13,18 +13,17 @@
         <p>new billie eilish album coming´s may 17th</p>
     </header>
     <nav>
-        <a href="https://music.apple.com/br/album/when-we-all-fall-asleep-where-do-we-go/1450695723" target="_blank">wwafawdwg</a>
-        <a href="https://music.apple.com/br/album/happier-than-ever/1564530719" target="_blank">hte</a>
+        <a href="https://music.apple.com/br/album/when-we-all-fall-asleep-where-do-we-go/1450695723" target="_blank"><abbr title="WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?">wwafawdwg</abbr></a>
+        <a href="https://music.apple.com/br/album/happier-than-ever/1564530719" target="_blank"><abbr title="Happier Than Ever">hte</abbr></a>
     </nav>
 
     <main>
         <article>
             <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
             <h1>ABOUT ALBUM</h1>
-            <p>this is the third billie eilish album, after wwafawdwg and hte, finally she´s back with hmhas</p>
-            <picture>
-               <source media="(max-width: 800px)" srcset="imgs/hmhas-iphone3.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
-           
+            <p>this is the third billie eilish album, after <abbr title="WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?">wwafawdwg</abbr> and <abbr title="Happier Than Ever">hte</abbr>, finally she´s back with <abbr title="HIT ME HARD AND SOFT">hmhas</abbr>, look the album cover</p>
+                <picture>
+                   <source media="(max-width: 800px)" srcset="imgs/hmhas-iphone3.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
               <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/j65yU7fxB98?si=wrZkP29vr9CthSvD" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
               
