--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <article>
             <div class="blosh"><img src="imgs/blosh.png" alt=""></div>
             <h1>ABOUT ALBUM</h1>
-            <p>this is the third billie eilish album, after <abbr title="WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?">wwafawdwg</abbr> and <abbr title="Happier Than Ever">hte</abbr>, finally she´s back with <abbr title="HIT ME HARD AND SOFT">hmhas</abbr>, look the album cover</p>
+            <p>this is the third billie eilish album, after <abbr title="WHEN WE ALL FALL ASLEEP, WHERE DO WE GO?">wwafawdwg</abbr> and <abbr title="Happier Than Ever">hte</abbr>, finally she´s back with <abbr title="HIT ME HARD AND SOFT">hmhas</abbr></p>
                 <picture>
                    <source media="(max-width: 800px)" srcset="imgs/hmhas-iphone3.jpg"> <img src="imgs/billie hit me hard and soft2.jpg" alt=""></picture>
               <p>hit me hard and soft will feature 10 songs not explicit, see teaser now!</p>
